[package]
name = "aoc"
version = "1.0.0"
edition = "2024"
authors = ["Martin van der Werff <github@newinnovations.nl>"]
description = "Live TUI runner for Advent of Code"
keywords = ["aoc", "tui", "advent of code"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/newinnovations/aoc-runner"
homepage = "https://github.com/newinnovations/aoc-runner"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
notify = "8.2"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
tokio-util = "0.7.17"
